--- a/PhotoAlbom/PhotoAlbom/View/SingleImageView.xaml
+++ b/PhotoAlbom/PhotoAlbom/View/SingleImageView.xaml
@@ -16,9 +16,6 @@
     
     <UserControl.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="c:\users\qix07414f2\documents\visual studio 2015\Projects\PhotoAlbom\PhotoAlbom\Resources\Resources.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
             <conver:BackVisibilityConverter x:Key="backVisibleConversation"/>
         </ResourceDictionary>
     </UserControl.Resources>
@@ -34,22 +31,38 @@
             <ColumnDefinition Width="0.25*"/>
         </Grid.ColumnDefinitions>
         
-        <Image Source="{Binding Path}" />
-        <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Button Background="Transparent" Command="{Binding parent.PhotoUp}" CommandParameter="{Binding}">
+        <Image Source="{Binding Path}" Margin="15,30,15,30"/>
+        <UniformGrid  Grid.Column="1"
+                      HorizontalAlignment="Stretch" 
+                      VerticalAlignment="Stretch"
+                      Margin="15,30,15,30"
+                      Columns="0"
+                      Rows="3"
+                      >
+            <Button Background="Transparent"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    Command="{Binding parent.PhotoUp}" CommandParameter="{Binding}">
                 <Button.Content>
-                    <Image Source="c:\users\qix07414f2\documents\visual studio 2015\Projects\PhotoAlbom\PhotoAlbom\Resources\Image\if_arrow_full_up_103296.png"/>
+                    <Image Source="/Resources/Image/ArrowUp.png"/>
                 </Button.Content>
-               
             </Button>
-            <Button Content="BLUR" Background="Yellow"/>
-            <Button Background="Transparent" Command="{Binding parent.PhotoDown}" CommandParameter="{Binding}">
+            <Button Content="BLUR" 
+                    Background="Yellow"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"/>
+            <Button Background="Transparent"
+                    HorizontalContentAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Command="{Binding parent.PhotoDown}" CommandParameter="{Binding}">
                 <Button.Content>
-                    <Image Source="c:\users\qix07414f2\documents\visual studio 2015\Projects\PhotoAlbom\PhotoAlbom\Resources\Image\if_arrow_full_down_103291.png"/>
+                    <Image Source="/Resources/Image/arrowDown.png"/>
                 </Button.Content>
                 
             </Button>
-        </StackPanel>
+        </UniformGrid>
     </Grid>
 
    
