Drop unnessesary files

--- a/PhotoAlbom/PhotoAlbom/View/PhotoSetView.xaml
+++ b/PhotoAlbom/PhotoAlbom/View/PhotoSetView.xaml
@@ -5,8 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PhotoAlbom.View"
              xmlns:conver="clr-namespace:PhotoAlbom.View.Converters"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
              mc:Ignorable="d" 
              xmlns:vm="clr-namespace:PhotoAlbom.ViewModel"
              d:DesignHeight="300" d:DesignWidth="300"
@@ -32,8 +30,6 @@
 
     <ScrollViewer DataContext="{Binding PhotoSet}"  VerticalScrollBarVisibility="Auto">
         <Grid >
-            <ProgressBar Value="{Binding PhotoSet.CurrentProgress, Mode=OneWay}" 
-                         Visibility="{Binding PhotoSetProgressVisibility}"/>
             <ItemsControl ItemsSource="{Binding ImageCollection,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" >
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -42,7 +38,10 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate >
-                        <Image HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Source="{Binding Path,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" >
+                        <Image HorizontalAlignment="Center" 
+                               VerticalAlignment="Center"  
+                               Margin="15"
+                              Source="{Binding Path,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" >
                             <Image.InputBindings>
                                 <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding parent.DoubleClick}" CommandParameter="{Binding}"/>
                             </Image.InputBindings>
